--- a/plugins/MythicMobs/Items/cleric_items.yml
+++ b/plugins/MythicMobs/Items/cleric_items.yml
@@ -1,159 +1,138 @@
-# Itens focais do Clérigo - MythicMobs
-LifeHolySymbol:
-  Id: "minecraft:blaze_rod"
-  Display: "&aSímbolo Sagrado da Vida"
+Cleric_T1_Symbol:
+  Id: GOLD_NUGGET
+  Display: '&6Símbolo Sagrado do Acolhimento'
   Lore:
-    - "&7Canaliza curas divinas quando clicado."
-    - "&eRequer permissão: class_cleric.life"
+  - '&7Classe: Clérigo'
+  - '&eClique direito:&7 Palavra Curativa'
+  - '&eClique esquerdo:&7 Luz Sagrada'
   Options:
     Unbreakable: true
-    HideFlags: true
   Enchantments:
-    - DURABILITY:3
-  PersistentData:
-    clericDomain: "life"
-    skillBinding: "palavra_curativa"
+    loyalty: 1
+  NBT:
+    class_lock: 'class_cleric'
   Skills:
-    - condition{c=permission{p=class_cleric.life}} true
-    - command{c="cleric_cast palavra";delay=1} @self ~onRightClick
-    - command{c="cleric_cast palavra";delay=1} @self ~onLeftClick
-LifeGuardianMace:
-  Id: "minecraft:iron_shovel"
-  Display: "&aMaça do Guardião"
+  - skill{s=Palavra_Curativa} @target ~onRightClick
+  - skill{s=Luz_Sagrada} @target ~onLeftClick
+
+Cleric_T1_Lanterna_Twilight:
+  Id: LANTERN
+  Display: '&5Lanterna do Poente'
   Lore:
-    - "&7Atalho para Proteção Sagrada."
-    - "&ePermissão necessária: class_cleric"
+  - '&7Domínio: Crepúsculo'
+  - '&eClique direito:&7 Manto do Poente'
+  - '&eSneak+Clique:&7 Sino da Vigília'
   Options:
     Unbreakable: true
-    HideFlags: true
+  NBT:
+    class_lock: 'class_cleric.class_cleric.twilight'
+  Skills:
+  - skill{s=Manto_do_Poente} @self ~onRightClick
+  - skill{s=Sino_da_Vigilia} @self ~onRightClickSneak
+
+Cleric_T2_Maza_War:
+  Id: IRON_SHOVEL
+  Display: '&cMaça Consagrada do Combate'
+  Lore:
+  - '&7Domínio: Guerra'
+  - '&eClique direito:&7 Estandarte Sagrado (Ativar)'
+  - '&eClique esquerdo:&7 Martelo Retumbante'
+  Options:
+    Unbreakable: true
   Enchantments:
-    - KNOCKBACK:2
-  PersistentData:
-    clericDomain: "life"
-    skillBinding: "protecao_sagrada"
+    knockback: 1
+  NBT:
+    class_lock: 'class_cleric.class_cleric.war'
   Skills:
-    - condition{c=permission{p=class_cleric}} true
-    - command{c="cleric_cast escudo";delay=1} @self ~onRightClick
-LifePrayerBeads:
-  Id: "minecraft:amethyst_shard"
-  Display: "&aContas de Oração"
-  Lore:
-    - "&7Troca rápida para Bênção Abundante."
-  Options:
-    Unbreakable: true
-  PersistentData:
-    clericDomain: "life"
-    skillBinding: "bencao_abundante"
-  Skills:
-    - condition{c=permission{p=class_cleric.life}} true
-    - command{c="cleric_cast bencao";delay=1} @self ~onRightClick
-LifeSanctuaryUrn:
-  Id: "minecraft:cauldron"
-  Display: "&aUrna do Santuário"
-  Lore:
-    - "&7Toque Purificador em área."
-  Skills:
-    - condition{c=permission{p=class_cleric.life}} true
-    - command{c="cleric_cast purificar";delay=1} @self ~onRightClick
-LifeDivineRelic:
-  Id: "minecraft:respawn_anchor"
-  Display: "&aRelíquia Divina"
-  Lore:
-    - "&cHabilita Milagre Vital (PvP bloqueado)."
-  Skills:
-    - condition{c=permission{p=class_cleric.life}} true
-    - command{c="cleric_cast milagre";delay=1} @self ~onRightClick
+  - skill{s=Estandarte_Sagrado_Ativar} @self ~onRightClick
+  - skill{s=Martelo_Retumbante} @target ~onLeftClick
 
-WarSacredHammer:
-  Id: "minecraft:golden_axe"
-  Display: "&cMartelo Sagrado de Guerra"
+Cleric_T2_Turbilo_Life:
+  Id: HOPPER
+  Display: '&aTuríbulo da Graça'
   Lore:
-    - "&7Canaliza Golpe Divinamente Guiado."
+  - '&7Domínio: Vida'
+  - '&eClique direito:&7 Halo Reconfortante'
+  - '&eSneak+Clique:&7 Graça Abundante'
   Options:
     Unbreakable: true
-    HideFlags: true
-  PersistentData:
-    clericDomain: "war"
-    skillBinding: "golpe_divino"
+  NBT:
+    class_lock: 'class_cleric.class_cleric.life'
   Skills:
-    - condition{c=permission{p=class_cleric.war}} true
-    - command{c="cleric_cast golpe";delay=1} @self ~onRightClick
-WarHolySpear:
-  Id: "minecraft:trident"
-  Display: "&cLança Consagrada"
-  Lore:
-    - "&7Dispara Estilhaço Consagrado."
-  Skills:
-    - condition{c=permission{p=class_cleric.war}} true
-    - command{c="cleric_cast estilhaco";delay=1} @self ~onRightClick
-WarBattleBanner:
-  Id: "minecraft:orange_banner"
-  Display: "&cEstandarte Sagrado"
-  Lore:
-    - "&7Clique direito para erguer o estandarte."
-  Skills:
-    - condition{c=permission{p=class_cleric.war}} true
-    - command{c="cleric_cast estandarte";delay=1} @self ~onRightClick
-WarWarhorn:
-  Id: "minecraft:goat_horn"
-  Display: "&cChifre de Guerra"
-  Lore:
-    - "&7Ativa Marcha do Zelote."
-  Skills:
-    - condition{c=permission{p=class_cleric.war}} true
-    - command{c="cleric_cast marcha";delay=1} @self ~onRightClick
-WarCelestialCrown:
-  Id: "minecraft:golden_helmet"
-  Display: "&cCoroa Celestial"
-  Lore:
-    - "&7Ativa Coroa do Campeão."
-  Skills:
-    - condition{c=permission{p=class_cleric.war}} true
-    - command{c="cleric_cast coroa";delay=1} @self ~onRightClick
+  - skill{s=Halo_Reconfortante} @location ~onRightClick
+  - skill{s=Graca_Abundante} @target ~onRightClickSneak
 
-TwilightLantern:
-  Id: "minecraft:lantern"
-  Display: "&5Lanterna do Crepúsculo"
+Cleric_T3_Cetro_Comum:
+  Id: BLAZE_ROD
+  Display: '&fCetro Solene'
   Lore:
-    - "&7Clicar concede Manto do Poente."
+  - '&7Classe: Clérigo'
+  - '&eClique direito:&7 Coro Resplandecente'
+  - '&eClique esquerdo:&7 Luz Punitiva'
   Options:
     Unbreakable: true
-    HideFlags: true
-  PersistentData:
-    clericDomain: "twilight"
-    skillBinding: "manto"
+  NBT:
+    class_lock: 'class_cleric'
   Skills:
-    - condition{c=permission{p=class_cleric.twilight}} true
-    - command{c="cleric_cast manto";delay=1} @self ~onRightClick
-TwilightOrb:
-  Id: "minecraft:ender_pearl"
-  Display: "&5Orbe Crepuscular"
+  - skill{s=Coro_Resplandecente} @self ~onRightClick
+  - skill{s=Luz_Punitiva} @target ~onLeftClick
+
+Cleric_T3_Emblema_Twilight:
+  Id: AMETHYST_SHARD
+  Display: '&5Emblema das Estrelas'
   Lore:
-    - "&7Dispara Raio Crepuscular."
+  - '&7Domínio: Crepúsculo'
+  - '&eClique direito:&7 Lanterna do Crepúsculo'
+  - '&eSneak+Clique:&7 Eclipse Parcial'
+  Options:
+    Unbreakable: true
+  NBT:
+    class_lock: 'class_cleric.class_cleric.twilight'
   Skills:
-    - condition{c=permission{p=class_cleric.twilight}} true
-    - command{c="cleric_cast raio";delay=1} @self ~onRightClick
-TwilightSanctum:
-  Id: "minecraft:shulker_shell"
-  Display: "&5Santuário Crepuscular"
+  - skill{s=Lanterna_do_Crepusculo} @location ~onRightClick
+  - skill{s=Eclipse_Parcial} @location ~onRightClickSneak
+
+Cleric_T4_Relic_Life:
+  Id: NETHER_STAR
+  Display: '&aRelíquia do Milagre Vital'
   Lore:
-    - "&7Ergue Refúgio Noturno."
+  - '&7Domínio: Vida'
+  - '&eClique direito:&7 Milagre Vital'
+  - '&eClique esquerdo:&7 Santuário Vivo'
+  Options:
+    Unbreakable: true
+  NBT:
+    class_lock: 'class_cleric.class_cleric.life'
   Skills:
-    - condition{c=permission{p=class_cleric.twilight}} true
-    - command{c="cleric_cast refugio";delay=1} @self ~onRightClick
-TwilightCenser:
-  Id: "minecraft:brewing_stand"
-  Display: "&5Turíbulo do Entardecer"
+  - skill{s=Milagre_Vital} @target ~onRightClick
+  - skill{s=Santuario_Vivo} @self ~onLeftClick
+
+Cleric_T4_Estandarte_Supremo:
+  Id: BANNER
+  Display: '&cEstandarte de Guerra Celestial'
   Lore:
-    - "&7Invoca Bruma Reconfortante."
+  - '&7Domínio: Guerra'
+  - '&eClique direito:&7 Coroa do Campeão'
+  - '&eSneak+Clique:&7 Juízo de Guerra'
+  Options:
+    Unbreakable: true
+  NBT:
+    class_lock: 'class_cleric.class_cleric.war'
   Skills:
-    - condition{c=permission{p=class_cleric.twilight}} true
-    - command{c="cleric_cast bruma";delay=1} @self ~onRightClick
-TwilightDiadem:
-  Id: "minecraft:amethyst_cluster"
-  Display: "&5Diadema do Eclipse"
+  - skill{s=Coroa_do_Campeao} @self ~onRightClick
+  - skill{s=Juizo_de_Guerra} @target ~onRightClickSneak
+
+Cleric_T4_Lanterna_Crepuscular:
+  Id: SOUL_LANTERN
+  Display: '&5Lanterna do Eclipse Sagrado'
   Lore:
-    - "&7Ativa Eclipse Sagrado."
+  - '&7Domínio: Crepúsculo'
+  - '&eClique direito:&7 Eclipse Sagrado'
+  - '&eClique esquerdo:&7 Ampulheta Vespertina'
+  Options:
+    Unbreakable: true
+  NBT:
+    class_lock: 'class_cleric.class_cleric.twilight'
   Skills:
-    - condition{c=permission{p=class_cleric.twilight}} true
-    - command{c="cleric_cast eclipse";delay=1} @self ~onRightClick
+  - skill{s=Eclipse_Sagrado} @self ~onRightClick
+  - skill{s=Ampulheta_Vespertina} @self ~onLeftClick
